# iut-bot-djs

./: .babelrc.js  .editorconfig  .env  .env.sample  .eslintrc.json  .prettierrc.json  Cargo.toml  README.md  package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
hooks/: pre-commit
src/: eventRegister.js  event_handler.rs  groupsManager.js  joinForm.js  main.js  main.rs  messageUtils.js  shutdownHook.js
src/commands/: AboutCommand.js  AdminCommand.js  Command.js  GroupCommand.js  HelpCommand.js  SettingsCommand.js  StopCommand.js  TestCommand.js  commandProcessor.js  commandRegistry.js  commandUtils.js  errors.js  stop.rs
src/config/: customGroupsManager.js  groupsManager.js  storage.js
src/forms/: form.js  groupCreationForm.js  welcomeForm.js
src/lang/: en_US.json  translator.js
