[package]
name = "iut-bot-djs"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dependencies.serenity]
default-features = false
features = [
    "client",
    "model",
    "builder",
    "framework",
    "standard_framework",
    "cache",
    "utils",
    "http",
    "rustls_backend",
]
version = "0.8.0"
